# xiaoka-skills

./: .gitignore  AGENTS.md  README.md
skills/seedream5pro-image/: LICENSE  SKILL.md  pyproject.toml
skills/seedream5pro-image/references/: README.md  prompt-writing.md  session-format.md
skills/seedream5pro-image/references/academic-figures/: graphical-abstract.md  mechanism-diagram.md  method-pipeline-overview.md  multi-condition-comparison.md  neural-network-architecture.md  publication-chart.md  qualitative-comparison-grid.md  research-overview-poster.md  scientific-schematic.md
skills/seedream5pro-image/references/assets-and-props/: game-screenshot-mockup.md  retro-skeuomorphic-icons.md
skills/seedream5pro-image/references/avatars-and-profile/: character-grid-portrait.md  cultural-portrait-series.md  sticker-set.md  style-transfer-selfie.md  themed-3d-icon.md
skills/seedream5pro-image/references/branding-and-packaging/: beverage-label-design.md  brand-identity-board.md  character-merch-board.md  cosmetic-packaging.md  full-mascot-brand-doc.md  mascot-brand-kit.md
skills/seedream5pro-image/references/editing-workflows/: background-replacement.md  local-object-replacement.md  object-removal.md  portrait-local-edit.md  product-retouching.md
skills/seedream5pro-image/references/grids-and-collages/: ad-banner-multi-grid.md  anime-pitch-board.md  banner-grid-2x2.md  lookbook-grid.md  mixed-style-multi-panel.md
skills/seedream5pro-image/references/infographics/: bento-grid-infographic.md  (+5 more)
skills/seedream5pro-image/scripts/: generate.py
(+80 files in other folders)
