[project]
name = "seedream"
version = "2.3.0"
description = "Seedream 5.0 Pro 图像生成 CLI - 文生图/图生图/交互编辑"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "httpx>=0.28",
    "pydantic>=2.0",
    "python-multipart>=0.0.18",
    "annotated-doc>=0.0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.scripts]
seedream = "seedream.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"seedream" = ["static/*"]

[tool.uv.sources]